--- a/frontend-4/styles.css
+++ b/frontend-4/styles.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url('pictures/apple-logo-apple-7680x4320-13006.jpeg');
+    background-image: url('pictures/apple_logo_background.jpeg');
     background-size: cover;
     background-repeat: no-repeat;
 }
@@ -21,4 +21,49 @@ nav {
 .logo a {
     color: white;
     text-decoration: none;
+    position: relative;
+    display: inline-block;
+    padding-bottom: 1px;
+}
+
+.logo a::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 0;
+    height: 2px;
+    background-color: white;
+    transition: width 0.3s ease;
+}
+
+.logo a:hover::after {
+    width: 100%;
+}
+
+.register button {
+    padding: 5px 5px 5px 5px;
+    width: 70px;
+    border: none;
+    border-radius: 30px;
+    font-weight: bold;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    cursor: pointer;
+}
+
+.welcome-div {
+    color: white;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    width: 500px;
+    margin-top: 220px;
+}
+
+.welcome-div button {
+    border: none;
+    padding: 10px 10px 10px 10px;
+    border-radius: 30px;
+    font-weight: bold;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    text-align: center;
+    cursor: pointer;
 }
