--- a/frontend-4/styles.css
+++ b/frontend-4/styles.css
@@ -1,69 +1,287 @@
-body {
-    background-image: url('pictures/apple_logo_background.jpeg');
-    background-size: cover;
-    background-repeat: no-repeat;
+* {
+    margin: 0;
+    padding: 0;
+    scroll-behavior: smooth;
+    font-family: 'Poppins', sans-serif;
 }
 
-nav {
+
+.navbar {
+    background-color: #000;
+    color: white;
+    height: 70px;
     display: flex;
-    align-items: center;
     justify-content: space-between;
-    gap: 10px;
+    align-items: center;
+    padding: 0 30px;
+    top: 0;
+    z-index: 1000;
 }
 
-.logo {
+.navbar-left {
     display: flex;
     align-items: center;
-    gap: 15px;
-    color: white;
+    gap: 10px;
+    font-size: 22px;
 }
 
-.logo a {
-    color: white;
+.navbar-links {
+    list-style: none;
+    display: flex;
+    gap: 25px;
+}
+
+.navbar-links a {
     text-decoration: none;
+    color: white;
     position: relative;
-    display: inline-block;
-    padding-bottom: 1px;
+    padding-bottom: 4px;
+    font-weight: 500;
 }
 
-.logo a::after {
+.navbar-links a::after {
     content: '';
     position: absolute;
+    width: 0%;
+    height: 2px;
+    background: white;
     left: 0;
     bottom: 0;
-    width: 0;
-    height: 2px;
-    background-color: white;
     transition: width 0.3s ease;
 }
 
-.logo a:hover::after {
+.navbar-links a:hover::after {
     width: 100%;
 }
 
-.register button {
-    padding: 5px 5px 5px 5px;
-    width: 70px;
-    border: none;
+.navbar-right .btn {
+    padding: 7px 15px;
+    margin-left: 10px;
     border-radius: 30px;
-    font-weight: bold;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    border: none;
     cursor: pointer;
+    font-weight: bold;
+    transition: background 0.3s;
+}
+
+.login {
+    background-color: white;
+    color: black;
+}
+
+.signup {
+    background-color: orangered;
+    color: white;
+}
+
+.signup:hover {
+    background-color: darkorange;
+}
+
+.login:hover {
+    background-color: #ddd;
 }
 
 .welcome-div {
+    background-image: url('pictures/apple_logo_background.jpeg');
+    background-size: cover;
+    background-repeat: no-repeat;
     color: white;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    width: 100%;
+    height: 700px;
+}
+
+.msg {
     width: 500px;
-    margin-top: 220px;
+    padding-top: 280px;
+    padding-left: 10px;
 }
 
 .welcome-div button {
+    margin-top: 20px;
     border: none;
     padding: 10px 10px 10px 10px;
     border-radius: 30px;
     font-weight: bold;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 16px;
     text-align: center;
     cursor: pointer;
+}
+
+.services-grid {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+}
+
+#our-services {
+    text-align: center;
+    padding-top: 40px;
+    color: rgb(4, 4, 70);
+}
+
+.service {
+    width: 400px;
+    height: 400px;
+    margin-top: 30px;
+    margin-left: 40px;
+}
+
+.pic {
+    display: flex;
+    justify-content: center;
+
+}
+
+.service img {
+    width: 200px;
+    height: 200px;
+}
+
+.service p {
+    text-align: center;
+}
+
+.nos-produits h1 {
+    text-align: center;
+    color: white;
+    padding-top: 20px;
+}
+
+.nos-produits h3 {
+    color: white;
+    text-align: center;
+    padding-top: 15px;
+}
+
+.nos-produits {
+    background-color: rgb(4, 4, 70);
+    height: 860px;
+}
+
+.grid-products {
+    display: grid;
+    grid-template-columns: repeat(3, 2fr);
+    column-gap: 10px;
+    margin-left: 150px;
+    row-gap: 30px;
+    margin-top: 30px;
+}
+
+.product-div {
+    height: 350px;
+    width: 300px;
+    transition: transform 0.3s ease;
+}
+
+.product-div:hover {
+    transform: scale(1.02);
+    cursor: pointer;
+}
+
+
+img {
+    width: 200px;
+    height: 300px;
+    align-items: center;
+}
+
+.product-pic {
+    display: flex;
+    justify-content: center;
+    background-color: white;
+}
+
+.names {
+    background-color: orangered;
+    height: 50px;
+}
+
+
+#promotion {
+    text-align: center;
+    margin-top: 40px;
+    color: rgb(4, 4, 70);
+}
+
+
+.promo-grid {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    margin-top: 30px;
+    margin-left: 50px;
+
+}
+
+.promo-pic {
+    display: flex;
+    justify-content: center;
+}
+
+.promo-pic img {
+    height: 300px;
+    width: 300px;
+}
+
+
+figcaption {
+    text-align: left;
+    padding-left: 110px;
+}
+
+figcaption p {
+    margin: 0;
+}
+
+
+.promo-product {
+    height: 500px;
+    width: 400px;
+    transition: transform 0.3s ease;
+}
+
+.promo-product:hover {
+    transform: scale(1.02);
+    cursor: pointer;
+}
+
+
+
+.command-link {
+    margin-top: 30px;
+    margin-left: 90px;
+    justify-content: center;
+}
+
+.command-link a {
+    background-color: orangered;
+    color: white;
+    font-weight: bold;
+    font-size: 15px;
+    padding: 10px 10px 10px 10px;
+    border-radius: 9999px;
+    text-decoration: none;
+}
+
+.command-link a:hover {
+    background-color: rgb(148, 45, 8);
+}
+
+#about-us {
+    text-align: center;
+    color: rgb(4, 4, 70);
+    margin-top: 100px;
+}
+
+/*----------------------------------------------- foooooter  ------------------------------------------*/
+footer {
+    background-color: #111;
+    color: #ccc;
+    text-align: center;
+    padding: 20px 10px;
+    font-size: 14px;
+    margin-top: 90px;
+}
+
+footer p {
+    margin: 5px 0;
 }
