--- a/frontend-4/styles.css
+++ b/frontend-4/styles.css
@@ -5,6 +5,7 @@
     font-family: 'Poppins', sans-serif;
 }
 
+/*------------------------------------- Welcome Div -------------------------------------*/
 
 .navbar {
     background-color: #000;
@@ -108,6 +109,9 @@
     cursor: pointer;
 }
 
+/*-------------------------------------  Our services  -------------------------------------*/
+
+
 .services-grid {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
@@ -140,6 +144,9 @@
 .service p {
     text-align: center;
 }
+
+/*-------------------------------------  Notre Boutique  -------------------------------------*/
+
 
 .nos-produits h1 {
     text-align: center;
@@ -196,6 +203,7 @@ img {
     height: 50px;
 }
 
+/*-------------------------------------Promotion -------------------------------------*/
 
 #promotion {
     text-align: center;
@@ -266,20 +274,50 @@ figcaption p {
     background-color: rgb(148, 45, 8);
 }
 
+/*-------------------------------------about us ---------------------------------------------------------*/
+
 #about-us {
     text-align: center;
     color: rgb(4, 4, 70);
     margin-top: 100px;
 }
 
+.aboutus-flex {
+    margin-top: 50px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: rgb(4, 4, 70);
+    height: 480px;
+}
+
+.aboutus-img img {
+    width: 600px;
+    height: 400px;
+    margin-left: 20px;
+    border-radius: 30px;
+    box-shadow: 10px 10px rgb(0, 0, 0, 0.4);
+}
+
+
+.aboutus-describ {
+    width: 800px;
+    color: white;
+}
+
+ul {
+    padding-left: 40px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
 /*----------------------------------------------- foooooter  ------------------------------------------*/
 footer {
-    background-color: #111;
+    background-color: rgb(4, 4, 70);
     color: #ccc;
     text-align: center;
     padding: 20px 10px;
     font-size: 14px;
-    margin-top: 90px;
 }
 
 footer p {
