--- a/frontend-4/app/templates/home_page.html
+++ b/frontend-4/app/templates/home_page.html
@@ -7,7 +7,7 @@
     <title>AppleZone</title>
 
     <!------------------------------------  import --------------------------------------------->
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../static/css/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
     <link rel="stylesheet" href="signup.html">
@@ -62,7 +62,7 @@
     <div class="services-grid ">
         <div class="service">
             <div class="pic">
-                <img src="pictures/livraison.jpg" alt="">
+                <img src="../static/css/pictures/livraison.jpg" alt="">
             </div>
 
             <p> <strong> 🚚 la livraison 100% gratuite pour les 58 wilayas </strong> <br>.
@@ -74,7 +74,7 @@
 
         <div class="service">
             <div class="pic">
-                <img src="pictures/gift.jpg" alt="">
+                <img src="../static/css/pictures/gift.jpg" alt="">
             </div>
 
             <p>
@@ -86,7 +86,7 @@
 
         <div class="service">
             <div class="pic">
-                <img src="pictures/time.jpg" alt="">
+                <img src="../static/css/pictures/time.jpg" alt="">
             </div>
 
             <p>
@@ -101,13 +101,13 @@
     <!--------------------------------  Nos Produits ---------------------------------->
 
 
-    <div onclick="window.open('iPhone.html', '_blanck')" id="boutique" class="nos-produits">
+    <div id="boutique" class="nos-produits">
         <h1>Dans Notre Boutique</h1>
         <div class="grid-products">
 
-            <div class="product-div">
+            <div onclick="window.open('iPhone.html', '_blanck')" class="product-div">
                 <div class="product-pic">
-                    <img src="pictures/iPhones-removebg-preview.png" alt="">
+                    <img src="../static/css/pictures/iPhones-removebg-preview.png" alt="">
                 </div>
 
                 <div onclick="window.open('iPhone.html', '_blanck')" class="names">
@@ -116,9 +116,9 @@
 
             </div>
 
-            <div class="product-div">
+            <div onclick="window.open('macBook.html','_blanck')" class="product-div">
                 <div class="product-pic">
-                    <img src="pictures/MacBook-removebg-preview.png" alt="">
+                    <img src="../static/css/pictures/MacBook-removebg-preview.png" alt="">
                 </div>
 
                 <div class="names">
@@ -128,7 +128,7 @@
 
             <div class="product-div">
                 <div class="product-pic">
-                    <img src="pictures/apple_watch-removebg-preview.png" alt="">
+                    <img src="../static/css/pictures/apple_watch-removebg-preview.png" alt="">
                 </div>
 
                 <div class="names">
@@ -138,7 +138,7 @@
 
             <div class="product-div">
                 <div class="product-pic">
-                    <img src="pictures/iPad-removebg-preview.png" alt="">
+                    <img src="../static/css/pictures/iPad-removebg-preview.png" alt="">
                 </div>
 
                 <div class="names">
@@ -148,7 +148,7 @@
 
             <div class="product-div">
                 <div class="product-pic">
-                    <img src="pictures/airPods-removebg-preview.png" alt="">
+                    <img src="../static/css/pictures/airPods-removebg-preview.png" alt="">
                 </div>
 
                 <div class="names">
@@ -159,7 +159,7 @@
 
             <div class="product-div">
                 <div class="product-pic">
-                    <img src="pictures/apple_accessoire-removebg-preview.png" alt="">
+                    <img src="../static/css/pictures/apple_accessoire-removebg-preview.png" alt="">
                 </div>
 
                 <div class="names">
@@ -177,7 +177,7 @@
     <div class="promo-grid">
         <div class="promo-product">
             <div class="promo-pic">
-                <img src="pictures/macbook_air_m4_promo.png" alt="">
+                <img src="../static/css/pictures/macbook_air_m4_promo.png" alt="">
 
             </div>
             <figcaption>
@@ -198,7 +198,7 @@
 
         <div class="promo-product">
             <div class="promo-pic">
-                <img src="pictures/iPhone16_promo.png" alt="">
+                <img src="../static/css/pictures/iPhone16_promo.png" alt="">
             </div>
 
             <figcaption>
@@ -219,7 +219,7 @@
 
         <div class="promo-product">
             <div class="promo-pic">
-                <img src="pictures/airPods4_prom.png" alt="">
+                <img src="../static/css/pictures/airPods4_prom.png" alt="">
             </div>
             <figcaption>
                 <p><strong>Produit :</strong> AirPods 4</p>
@@ -244,7 +244,7 @@
     <h1 id="about-us">Qui sommes-nous ?</h1>
     <div class="aboutus-flex">
         <div class="aboutus-img">
-            <img src="pictures/boutique_phone.jpg" alt="">
+            <img src="../static/css/pictures/boutique_phone.jpg" alt="">
         </div>
 
         <div class="aboutus-describ">
