--- a/frontend-4/app/templates/iPhone.html
+++ b/frontend-4/app/templates/iPhone.html
@@ -7,7 +7,7 @@
     <title>Our iPhones</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
-    <link rel="stylesheet" href="iPhone.css">
+    <link rel="stylesheet" href="../static/css/iPhone.css">
     <link rel="stylesheet" href="home_page.html">
 </head>
 
@@ -84,7 +84,7 @@
 
             <div class="product">
                 <div class="product-pic">
-                    <img src="pictures/iPhone16_bluemodele-removebg-preview.png" alt="">
+                    <img src="../static/css/pictures/iPhone16_bluemodele-removebg-preview.png" alt="">
                 </div>
 
                 <div class="description">
@@ -105,7 +105,7 @@
 
             <div class="product">
                 <div class="product-pic">
-                    <img src="pictures/iPhoneXr-removebg-preview.png" alt="">
+                    <img src="../static/css/pictures/iPhoneXr-removebg-preview.png" alt="">
                 </div>
 
                 <div class="description">
@@ -126,7 +126,7 @@
 
             <div class="product">
                 <div class="product-pic">
-                    <img src="pictures/iPhone15promax-removebg-preview.png" alt="">
+                    <img src="../static/css/pictures/iPhone15promax-removebg-preview.png" alt="">
                 </div>
                 <div class="description">
                     <figcaption>
@@ -146,7 +146,7 @@
 
             <div class="product">
                 <div class="product-pic">
-                    <img src="pictures/iPhone12-removebg-preview.png" alt="">
+                    <img src="../static/css/pictures/iPhone12-removebg-preview.png" alt="">
                 </div>
 
                 <div class="description">
@@ -167,8 +167,9 @@
 
             <div class="product">
                 <div class="product-pic">
-                    <img src="pictures/iPhone_13_Pro_Max_-_128GB_-_Silver_-_Grade_A_-_The_iOutlet-removebg-preview.png"
+                    <img src="../static/css/pictures/iPhone_13_Pro_Max_-_128GB_-_Silver_-_Grade_A_-_The_iOutlet-removebg-preview.png"
                         alt="">
+                    alt="">
                 </div>
 
                 <div class="description">
@@ -190,7 +191,7 @@
 
             <div class="product">
                 <div class="product-pic">
-                    <img src="pictures/Apple_iPhone_11_-_256_GB_-__PRODUCT_RED__Unlocked__for_sale_online___eBay-removebg-preview.png"
+                    <img src="../static/css/pictures/Apple_iPhone_11_-_256_GB_-__PRODUCT_RED__Unlocked__for_sale_online___eBay-removebg-preview.png"
                         alt="">
                 </div>
 
@@ -213,7 +214,8 @@
 
             <div class="product">
                 <div class="product-pic">
-                    <img src="pictures/Apple_iPhone_14_Pro_Max__256_GB__-_Space_Schwarz-removebg-preview.png" alt="">
+                    <img src="../static/css/pictures/Apple_iPhone_14_Pro_Max__256_GB__-_Space_Schwarz-removebg-preview.png"
+                        alt="">
                 </div>
                 <div class="description">
                     <figcaption>
@@ -234,7 +236,7 @@
 
             <div class="product">
                 <div class="product-pic">
-                    <img src="pictures/__iPhone_XS_Giveaway_Contest_2021_-_Enter_to_win_iPhone_XS_FREE-removebg-preview.png"
+                    <img src="../static/css/pictures/__iPhone_XS_Giveaway_Contest_2021_-_Enter_to_win_iPhone_XS_FREE-removebg-preview.png"
                         alt="">
                 </div>
 
@@ -257,7 +259,7 @@
 
             <div class="product">
                 <div class="product-pic">
-                    <img src="pictures/Restored_Apple_iPhone_13_-_Fully_Unlocked_-_128_GB_Pink__Refurbished__-_Walmart_com-removebg-preview.png"
+                    <img src="../static/css/pictures/Restored_Apple_iPhone_13_-_Fully_Unlocked_-_128_GB_Pink__Refurbished__-_Walmart_com-removebg-preview.png"
                         alt="">
                 </div>
 
@@ -279,7 +281,7 @@
 
             <div class="product">
                 <div class="product-pic">
-                    <img src="pictures/Apple_iPhone_16__iPhone_16_Plus__iPhone_16_Pro_and_iPhone_16_Pro_Max_launched__Price_and_Specifications-removebg-preview.png"
+                    <img src="../static/css/pictures/Apple_iPhone_16__iPhone_16_Plus__iPhone_16_Pro_and_iPhone_16_Pro_Max_launched__Price_and_Specifications-removebg-preview.png"
                         alt="">
                 </div>
 
@@ -301,7 +303,7 @@
 
             <div class="product">
                 <div class="product-pic">
-                    <img src="pictures/iPhone12promax-removebg-preview.png" alt="">
+                    <img src="../static/css/pictures/iPhone12promax-removebg-preview.png" alt="">
                 </div>
 
                 <div class="description">
@@ -323,7 +325,7 @@
 
             <div class="product">
                 <div class="product-pic">
-                    <img src="pictures/iPhone_X-removebg-preview(1).png" alt="">
+                    <img src="../static/css/pictures/iPhone_X-removebg-preview(1).png" alt="">
                 </div>
 
                 <div class="description">
