--- a/frontend-4/app/templates/login.html
+++ b/frontend-4/app/templates/login.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="signin.css">
+    <link rel="stylesheet" href="../static/css/signin.css">
 
 
 
@@ -21,7 +21,7 @@
 <body>
 
     <fieldset>
-        <form action="">
+        <form action="" method="post">
             <h1>LOGIN</h1>
 
             <div class="div1">
